# skylords_rebot

./: Cargo.toml  README.md  locations.txt
data/: cards.json
requests/: hello.json  start.json
scripts/: loc.py  loc_draw.py  locations.json  locations.txt  mock_client.py
scripts/requests/: prepare.json
src/: bot.rs  card_data.rs  command_scheduler.rs  controller.rs  game_info.rs  location.rs  macro_behavior.rs  main.rs  utils.rs
src/controller/: combat_controller.rs  macro_controller.rs  spawn_controller.rs  squad_controller.rs
