[package]
name = "skylords_rebot"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
log = "^0.4"
env_logger = "^0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "^4", features = ["derive"] }

api = { path = "../api", package = "skylords_reborn_bot_api_types_rust", features = ["warp_wrapper"] }
sr_libs = { rev = "5706e128", git = "https://gitlab.com/skylords-reborn/rust-libraries", features=["serde"] }

serde_json = {version = "1.0.114", optional = true}
